<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListarReceitaActivity">

    <ImageView
        android:id="@+id/id_animacao_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/anima_o"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animation_file" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pretoTransparente"
            android:divider="@drawable/empty_tall_divider"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text_codigo"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/codigo_da_receita"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receita"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text_nome"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nome_da_receita"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text_categoria"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/categoria_da_receita"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descri_o"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text_descricao"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/descri_o_da_receita"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text_valor"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/valor_da_receita"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text_data"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/data_da_receita"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forma_de_recebimento"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/id_edit_text_forma"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/forma_de_recebimento_2"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/id_btn_voltar_cr"
        android:layout_width="170dp"
        android:layout_height="58dp"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_btn_salvar"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_btn_salvar"
        android:layout_width="177dp"
        android:layout_height="57dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_btn_voltar_cr"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>